--- a/View/index.html
+++ b/View/index.html
@@ -3,8 +3,54 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="../Content/Site.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="../Script/jquery-3.4.1.js"></script>
+   
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
 </head>
 <body>
 
+    <div class="container" id="linha">
+        <h1><b>Cadastro de Usuários</b></h1>
+    </div>
+    <br />
+    <div class="container">
+        <button type="button" class="btn btn-primary"><i class="glyphicon glyphicon-user"></i> Novo Usuário</button>
+    </div>
+    <br />
+    <div class="container" id="linha">
+        <div id="app">
+            <TABLE CLASS="table table-striped table-hover table-dark">
+                <thead>
+                    <tr>
+                        <TH SCOPE="col">#</TH>
+                        <TH SCOPE="col">NOME</TH>
+                        <TH SCOPE="col">EMAIL</TH>
+                        <TH SCOPE="col">TELEFONE</TH>
+                        <TH SCOPE="col">SENHA</TH>
+                        <TH SCOPE="col">EDITAR</TH>
+                        <th SCOPE="col">EXCLUIR</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="usuario in Usuarios" v-bind:key="usuario.id">
+                        <td SCOPE="row">{{usuario.id}}</td>
+                        <td>{{usuario.name}}</td>
+                        <td>{{usuario.email}}</td>
+                        <td>{{usuario.telefone}}</td>
+                        <td>{{usuario.senha}}</td>
+                        <td><a v-on:click="Editar(usuario.id)"><i CLASS="glyphicon glyphicon-pencil"></i></a></td>
+                        <td><a v-on:click="Excluir(usuario.id)"><i CLASS="glyphicon glyphicon-remove"></i></a></td>
+                    </tr>
+                </tbody>
+            </TABLE>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="../Script/View/ListaUsuario.js"></script>
+    </div>
 </body>
 </html>
